@@ -4,6 +4,7 @@ NVIDIA Texture Tools version 2.0.9
  * Fix the C wrapper and provide methods involving callbacks.
  * Improve C# / .NET Wrapper
  * Add an XNA Game Studio 3.1 Content Processor to make it easy to utilize NVIDIA Texture Tools in XNA applications.
+ * Fix single color DXT1a compressor. Fixes issue 134.
  
 NVIDIA Texture Tools version 2.0.8
  * Fix float to fixed image conversion. Patch provided by Alex Pfaffe. Fixes issue 121.
